[gd_scene load_steps=9 format=2]

[ext_resource path="res://world/briefing/pre_briefing.gd" type="Script" id=1]
[ext_resource path="res://world/briefing/pre_page.tscn" type="PackedScene" id=2]
[ext_resource path="res://utility/text_printer.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/fonts/tonight_friend/Tonight Friend.otf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/display_border.png" type="Texture" id=5]
[ext_resource path="res://utility/display_background.tscn" type="PackedScene" id=6]
[ext_resource path="res://utility/display.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[node name="Pre-flightBriefing" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" parent="." instance=ExtResource( 6 )]
visible = false
margin_top = 6.0
margin_right = 638.0
margin_bottom = 590.0

[node name="Display" parent="." instance=ExtResource( 7 )]
margin_left = 3.0
margin_right = 663.0
margin_bottom = 562.0

[node name="Button" type="Button" parent="."]
margin_left = 61.0
margin_top = 570.0
margin_right = 478.0
margin_bottom = 596.0
text = "I confirm that I have read and understnad the Pre-flight Briefing"

[node name="TextPrinter" parent="." instance=ExtResource( 3 )]

[node name="AllPages" type="HBoxContainer" parent="."]
margin_left = 44.0
margin_top = 51.0
margin_right = 1280.0
margin_bottom = 651.0
alignment = 1

[node name="Page1" parent="AllPages" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 600.0

[node name="StoryFluffGoesHere" parent="AllPages/Page1" index="0"]
text = "Day 1 fluff"

[node name="Page2" parent="AllPages" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 600.0

[node name="StoryFluffGoesHere" parent="AllPages/Page2" index="0"]
text = "Day 2 fluff"

[node name="Page3" parent="AllPages" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 600.0

[node name="StoryFluffGoesHere" parent="AllPages/Page3" index="0"]
text = "Day 3 fluff"

[node name="Page4" parent="AllPages" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 608.0
margin_right = 1212.0
margin_bottom = 600.0

[node name="NewToyPlayground" parent="AllPages/Page4" index="1"]
margin_right = 604.0

[node name="Page5" parent="AllPages" instance=ExtResource( 2 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 600.0

[node name="NewToyPlayground" parent="AllPages/Page5" index="1"]
margin_right = 638.0

[node name="TESTPAGE" type="HBoxContainer" parent="AllPages"]
margin_right = 1236.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )
size_flags_horizontal = 3

[node name="StoryFluffGoesHere" type="RichTextLabel" parent="AllPages/TESTPAGE"]
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 0 )
custom_fonts/normal_font = SubResource( 1 )
text = "Pilot:
pilot name
star Date:
day 1 / 6c / 07
Aircraft type:
old rusty
Flight Destination:
terminal 5A, New Sydney, Titan orbit
Purpose of flight:
deliver 4 barrels of live magenta Mussels
estimated travel  time:
8 standard cycles
expected weather:
low sun activity, minimal debris with no comets
Breaks:
There are no scheduled breaks
Emegencies:
There are no scheduled emergencies"

[node name="NewToyPlayground" type="ColorRect" parent="AllPages/TESTPAGE"]
margin_left = 604.0
margin_right = 1236.0
margin_bottom = 600.0
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
modulate = Color( 0.133333, 0.160784, 0.305882, 1 )
margin_right = 645.0
margin_bottom = 606.0
texture = ExtResource( 5 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[editable path="AllPages/Page1"]
[editable path="AllPages/Page2"]
[editable path="AllPages/Page3"]
[editable path="AllPages/Page4"]
[editable path="AllPages/Page5"]
